Fixed cluster row ui alignment

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2328,7 +2328,7 @@ textarea::placeholder {
 }
 
 .dc_width-max-content {
-    width: 'max-content'
+    width: max-content;
 }
 
 .dc_min-w-100{
